# swiped

./: Makefile.am  README.md  configure.ac  version_abi.sh  version_api.sh  vim.rc
swiped-bin/: Makefile.am
swiped-bin/src/: swiped-bin.cpp
swiped-bin/src/scene/: game.cpp  menu.cpp  notimplemented.cpp
swiped-lib/: Makefile.am
swiped-lib/include/swiped/: swiped.h
swiped-lib/include/swiped/engine/: engine.h  static_text.h
swiped-lib/include/swiped/loader/: loader.h  tga.h
swiped-lib/include/swiped/scene/: scene.h
swiped-lib/src/: swiped.cpp
swiped-lib/src/engine/: engine.cpp  static_text.cpp
swiped-lib/src/loader/: tga.cpp
swiped-lib/src/scene/: scene.cpp
swiped-tests/: Makefile.am  test_tga.cpp
